# cadrum-wasm-example

./: Makefile  run_node.mjs
.github/workflows/: deploy.yml
wasm/: Cargo.toml
wasm/src/: lib.rs
