[package]
name = "cadrum_web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
# Track cadrum `main` (unpinned, with wasm/Cargo.lock git-ignored) so every build
# re-resolves the latest commit — this repo's job is to canary the *current* cadrum
# wasm path. The self-contained wasm32 build relies on #205 (in-tree WASI stubs +
# OCCT ctor init) and #204 (EH unified on exnref), both in main.
cadrum = { git = "https://github.com/lzpel/cadrum" }

# OCCT-derived wasm exception handling makes wasm-opt(binaryen) crash in its
# Precompute pass, so disable wasm-opt (this only skips optimization).
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Size optimization for the final wasm (rust side only; OCCT/C++ is handled by cc).
# No `panic = "abort"`: wasm32-unknown-unknown already defaults to abort, so rustc
# emits no (legacy-EH) landing pads to clash with OCCT's exnref EH — verified by
# building without it (NODETEST:OK). It is therefore redundant here.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
